tests/good/binop/int/minus.go
package main;
import "fmt";

func main(){
	fmt.Print(5-2)
	fmt.Print(645132-9877645132)
}

/*
== Expected program output ==
3
-9877000000
*/