tests/bad/main/with_args.go
package main

func main (n int){}

/*
== Expected compiler output ==
File "./tests/bad/main/with_args.go", line 3, characters 5-9:
error: main doesn't expect arguments
*/